overflow issue

--- a/siminar-landing-2/assets/css/custom.css
+++ b/siminar-landing-2/assets/css/custom.css
@@ -1,5 +1,6 @@
 body{
   overflow: unset;
+  overflow-x: hidden;
 }
 
 .hero__device-mockup:before,
